# graph-serializer

./: .gitignore  CMakeLists.txt  README.md  class-diagram.plantuml  conanfile.py  res.gv  test.gv
contrib/: CMakeLists.txt
contrib/tiny-fsm/: CMakeLists.txt
data/examples/: binary-tree.gv  test.gv
data/proposal/: .~lock.lexemes.pdf#  lexemas.gv  lexemes.gv  symbols.gv
docs/: doxygen.config
docs/html/: action-queue_8cpp.html  action-queue_8cpp__incl.map  action-queue_8cpp__incl.md5  action-queue_8hpp.html  action-queue_8hpp__dep__incl.map  action-queue_8hpp__dep__incl.md5  action-queue_8hpp__incl.map  action-queue_8hpp__incl.md5  action-queue_8hpp_source.html  annotated.html  classTraversalTest-members.html  classTraversalTest.html  classTraversalTest__coll__graph.map  classTraversalTest__coll__graph.md5  classTraversalTest__inherit__graph.map  classTraversalTest__inherit__graph.md5  classcommon_1_1ActionQueue-members.html  classcommon_1_1ActionQueue.html  classcommon_1_1Graph-members.html  classcommon_1_1Graph.html  classcommon_1_1GraphDumpingFactory-members.html  classcommon_1_1GraphDumpingFactory.html  classcommon_1_1GraphDumpingFactory__coll__graph.map  classcommon_1_1GraphDumpingFactory__coll__graph.md5  classcommon_1_1Graph__inherit__graph.map  classcommon_1_1Graph__inherit__graph.md5  classcommon_1_1IAction-members.html  classcommon_1_1IAction.html  classcommon_1_1IAction__inherit__graph.map  classcommon_1_1IAction__inherit__graph.md5  classcommon_1_1PushEdgeAction-members.html  classcommon_1_1PushEdgeAction.html  classcommon_1_1PushEdgeAction__coll__graph.map  classcommon_1_1PushEdgeAction__coll__graph.md5  classcommon_1_1PushEdgeAction__inherit__graph.map  classcommon_1_1PushEdgeAction__inherit__graph.md5  classcommon_1_1PushNodeAction-members.html  classcommon_1_1PushNodeAction.html  classcommon_1_1PushNodeAction__coll__graph.map  classcommon_1_1PushNodeAction__coll__graph.md5  (+629 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  (+83 more)
docs/latex/: .refman.tex.swp  action-queue_8cpp.tex  action-queue_8cpp__incl.md5  action-queue_8hpp.tex  action-queue_8hpp__dep__incl.md5  action-queue_8hpp__incl.md5  action-queue_8hpp_source.tex  annotated.tex  classTraversalTest.tex  classTraversalTest__coll__graph.md5  classTraversalTest__inherit__graph.md5  classcommon_1_1ActionQueue.tex  classcommon_1_1Graph.tex  classcommon_1_1GraphDumpingFactory.tex  classcommon_1_1GraphDumpingFactory__coll__graph.md5  classcommon_1_1Graph__inherit__graph.md5  classcommon_1_1IAction.eps  classcommon_1_1IAction.tex  classcommon_1_1IAction__inherit__graph.md5  classcommon_1_1PushEdgeAction.eps  classcommon_1_1PushEdgeAction.tex  classcommon_1_1PushEdgeAction__coll__graph.md5  classcommon_1_1PushEdgeAction__inherit__graph.md5  classcommon_1_1PushNodeAction.eps  classcommon_1_1PushNodeAction.tex  classcommon_1_1PushNodeAction__coll__graph.md5  classcommon_1_1PushNodeAction__inherit__graph.md5  classcommon_1_1SetLabelAction.eps  classcommon_1_1SetLabelAction.tex  classcommon_1_1SetLabelAction__coll__graph.md5  classcommon_1_1SetLabelAction__inherit__graph.md5  classcommon_1_1SetWeightAction.tex  classcommon_1_1SetWeightAction__coll__graph.md5  classcommon_1_1SetWeightAction__inherit__graph.md5  classcommon_1_1TraversalGraph.tex  classcommon_1_1TraversalGraph__coll__graph.md5  classlexer_1_1Arrow.eps  classlexer_1_1Arrow.tex  classlexer_1_1Arrow__coll__graph.md5  classlexer_1_1Arrow__inherit__graph.md5  (+389 more)
scripts/: build.py  cmake.sh  gv_build.sh
src/: CMakeLists.txt  main.cpp
src/algorithms/: CMakeLists.txt  traversal.cpp  traversal.hpp
src/common/: CMakeLists.txt  action-queue.cpp  action-queue.hpp  common.cpp  common.hpp  reverted.cpp  reverted.hpp
src/lexemes-fsm/: CMakeLists.txt
src/lexer/: CMakeLists.txt  lexer.cpp  lexer.hpp
src/parcer/: CMakeLists.txt  parcer.cpp  parcer.hpp
src/parser/: CMakeLists.txt  parser.cpp  parser.hpp
src/symbols-fsm/: CMakeLists.txt
src/tests/: CMakeLists.txt  common-test.cpp  parcer-test.cpp  parser-test.cpp  symbols-test.cpp  traversal-test.cpp
